# VAZer

./: .env.example  .gitignore  MEMORY.md  VAZer Desktop.cmd  pyproject.toml
docs/: 00-initial-idea.md  01-workflow-rules.md  02-sync-architecture.md  03-implementation-status.md  04-sync-map-schema.md  05-cut-plan-schema.md  06-render-scaffold.md  07-analysis-map-schema.md  08-transcript-artifact.md  09-cut-review-workflow.md  10-theater-vaz-profile.md  11-llm-draft-prompt.md  12-visual-packet.md  13-ai-draft.md  14-sample-set.md  15-ui.md  16-desktop-app.md  17-camera-role-classifier.md  18-fast-analysis.md  README.md
src/vazer/: __init__.py  ai_draft.py  analysis.py  camera_roles.py  cli.py  cut_plan.py  cut_review.py  desktop_app.py  draft_prompt.py  fast_analysis_backend.py  ffmpeg_stream.py  fftools.py  premiere.py  premiere_xml.py  process_manager.py  render.py  sample_set.py  sync.py  sync_map.py  theater_pipeline.py  transcribe.py  transcript.py  ui_server.py  visual_packet.py
